--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Rwitam\\AppData\\Roaming\\NetBeans\\8.1\\tomcat70.properties
+deploy.ant.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\8.1\\tomcat70.properties
 j2ee.server.home=C:/xampp/tomcat
 j2ee.server.instance=tomcat70:home=C:\\xampp\\tomcat
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\Rwitam\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+selected.browser=Chrome
+user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
