--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-codec-1.9.jar=commons-codec-1.9.jar
 file.reference.mysql-connector-java-5.1.42-bin.jar=mysql-connector-java-5.1.42-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -38,7 +39,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
+    ${file.reference.commons-codec-1.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
